--- a/styles/services.css
+++ b/styles/services.css
@@ -3,7 +3,7 @@
   padding: 88px 120px 120px;
 }
 
-#servicesheader {
+.services__header {
   text-align: center;
   margin-bottom: 56px;
 
@@ -12,7 +12,7 @@
   gap: 8px;
 }
 
-#services-grid {
+.services__grid {
   max-width: 888px;
   margin: 0 auto;
 
@@ -31,6 +31,9 @@
   gap: 20px;
 
   background: transparent;
+  transition:
+    transform 0.2s ease,
+    border-color 0.2s ease;
 }
 
 .service-card img {
@@ -50,21 +53,6 @@
 
 .service-card p {
   color: var(--gray-300);
-}
-
-.service-card {
-  padding: 20px;
-  border: 2px solid var(--gray-500);
-  border-radius: 12px;
-
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-
-  background: transparent;
-  transition:
-    transform 0.2s ease,
-    border-color 0.2s ease;
 }
 
 .service-card:hover {
